--- a/setup/cluster.yaml
+++ b/setup/cluster.yaml
@@ -6,24 +6,35 @@ kind: ClusterConfig
 metadata:
   name: aquasec-fargatedemo
   region: us-west-1
-  version: "1.27"
+  version: "1.28"
 
 vpc:
   nat:
     gateway: Single # other options: Disable, Single (default)
 
+iam:
+  withOIDC: true
+  serviceAccounts:
+    - metadata:
+        name: ebs-csi-controller-sa
+        namespace: kube-system
+      attachPolicyARNs:
+      - "arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy"
+      roleOnly: true
+      roleName: AmazonEKS_EBS_CSI_DriverRole
+
+addons:
+- name: aws-ebs-csi-driver
+  version: latest
+  serviceAccountRoleARN: arn:aws:iam::111222333444:role/AmazonEKS_EBS_CSI_DriverRole
 
 managedNodeGroups:
-  - name: managed-ng-1
-    minSize: 1
-    maxSize: 2
-    desiredCapacity: 1
+  - name: managed-ng
+    minSize: 2
+    maxSize: 4
+    desiredCapacity: 2
     volumeSize: 20
     privateNetworking: true
-    iam:
-      withAddonPolicies:
-        externalDNS: true
-        certManager: true
 
 fargateProfiles:
   - name: yelb-secure
